--- a/mugz_ui_mods FFF-edition/uimod-mugz-tinyplates/html_ui/mCSS/mugzIGMAT.css
+++ b/mugz_ui_mods FFF-edition/uimod-mugz-tinyplates/html_ui/mCSS/mugzIGMAT.css
@@ -14,7 +14,7 @@
   --color: #ffffff; /* Nameplate color */
   --data-color: #424242; /* Data color */
   --shadow-color: #424242; /* Text shadow and separator color */
-  --footy-color: #0078ff;
+  --footy-color: #ffff33;
   --shadow: -1px -1px 0 var(--shadow-color),
      0   -1px 0 var(--shadow-color),
      1px -1px 0 var(--shadow-color),
